# ex_analysis

./: README.md
es1/: CMakeLists.txt  die_test.sh  un_gen.sh
es1/analysis/: analysis.C  landau_analysis.C  landau_hm.root  un_xorshiro128p.root
es1/data/: landau_hm.txt  un_xorshiro128p.txt
es1/docs/: doc.tex
es1/prng/: CMakeLists.txt  Makefile  die_lgc  die_lgc.cpp  die_test.sh  die_trandom3  die_trandom3.cpp  die_trandommixmax.cpp  die_xorshiro128p  die_xorshiro128p.cpp  prng.cpp  prng.h  prngGen.cpp  prngGen.h  un_landau_hm  un_landau_hm.cpp  un_landau_inv.cpp  un_lgc  un_lgc.cpp  un_prngBW_inv  un_xorshiro128p  un_xorshiro128p.cpp  xorshiro.cpp  xorshiro.h  xorshiroGen.cpp  xorshiroGen.h
es1/prng/breit-wigner/: bw_xorshiro128p.cpp  bw_xorshiro128p.h  mc_prngBW_hm  mc_prngBW_hm.cpp  mc_prngBW_inv  mc_prngBW_inv.cpp  mc_xorshiro128pBW  mc_xorshiro128pBW.cpp
es1/test/: xorshiro128pDieharder_test.txt
es2/: CMakeLists.txt  compile.sh  gamma_constDLLI.txt  gamma_constFLLI.txt  gamma_constLDLLI.txt  main.cpp  un_emconst.sh
es2/analysis/: analysis.ipynb
es2/analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb
es2/emConst/: CMakeLists.txt  gamma_const.cpp  gamma_const.h  sum_alg.h  un_emconst.cpp
es3/: ML.cpp  ML.h  RooGenPdfPdf.cxx  RooGenPdfPdf.h  RooGenPdfPdf_cxx.d  RooGenPdfPdf_cxx_ACLiC_dict.cxx_tmp_81016  RooGenPdfPdf_cxx_ACLiC_dict_rdict.pcm  all_struct.cpp  compile.sh  prova  prova.cpp  prova_ml.cpp  proviamo.cpp
es4/: CMakeLists.txt  compile.sh
es4/pt_pl/: CMakeLists.txt  main.cpp  monte_carlo.cpp  monte_carlo.h  pt_dist  pt_dist.cpp
es5/: CMakeLists.txt  README.md  andamento  compile.sh  compute_and.cpp  func  plotting_func.cpp  res  results.cpp  xorshiro.h
es5/Monte_Carlo/: CMakeLists.txt  function.cpp  function.h  main.cpp  monte.cpp  monte.h  one.cpp  one.h  xorshiro.cpp
es6/: CMakeLists.txt  compile.sh  run.sh
es6/data/: data.root
es6/prng/: CMakeLists.txt  analysis.C  main.cpp  prova_fun  prova_fun.cpp  simulation.cpp  simulation.h  try.cpp  try.root  unfold.cpp  xorshiroGen.cpp  xorshiroGen.h
es6/results/: ideal.root  unfold_0.0134164-4e-07-7.5e-07.root  unfold_0.0268328-4e-07-7.5e-07.root  w_smeared.root
es7/: TMVATrain.root  dataset  dataset.cpp  dataset.root  mk_dataset.sh  prng.cpp  tmva_read.C  tmva_train.C
es7/NN_classification/plots/: CorrelationMatrixB.eps  CorrelationMatrixS.eps  annconvergencetest.eps  invBeffvsSeff.eps  mva_MLP.eps  mvaeffs_MLP.eps  network.eps  rejBvsS.eps  variables_id_c1.eps
es7/NN_classification/weights/: TMVAClassification_MLP.class.C  TMVAClassification_MLP.weights.xml
